--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,12 +22,29 @@ a:hover {
   color: #535bf2;
 }
 
+html, body, #root {
+  width: 100%;
+  min-height: 100vh;
+  font-family: Arial, sans-serif;
+  background-color: #f9f9f9;
+  overflow-x: hidden;
+  color: #333;
+}
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.page-container {
+  flex: 1 0 auto;
+}
+.footer {
+  flex-shrink: 0;
 }
 
 h1 {
